# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")
import("//mojo/public/mojo_application.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojo_native_application("browser") {
  sources = [
    "browser.cc",
  ]

  deps = [
    ":bindings",
    "//base",
    "//examples/window_manager:bindings",
    "//mojo/application",
    "//mojo/converters/geometry",
    "//mojo/services/geometry/interfaces",
    "//mojo/services/navigation/interfaces",
    "//mojo/services/view_manager/cpp",
    "//mojo/services/view_manager/interfaces",
    "//third_party/icu",
    "//url",
  ]
}

mojom("bindings") {
  sources = [
    "browser_host.mojom",
  ]
}
