# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("moterm_example_app") {
  sources = [
    "moterm_example_app.cc",
  ]

  deps = [
    "//base",
    "//examples/window_manager:bindings",
    "//mojo/application",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/public/interfaces/application",
    "//mojo/services/files/interfaces",
    "//mojo/services/geometry/interfaces",
    "//mojo/services/terminal/interfaces",
    "//mojo/services/view_manager/cpp",
  ]
}
