# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("pdf_viewer") {
  sources = [
    "pdf_viewer.cc",
  ]

  deps = [
    "//examples/bitmap_uploader",
    "//mojo/application",
    "//mojo/application:content_handler",
    "//mojo/data_pipe_utils",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/services/content_handler/interfaces",
    "//mojo/services/input_events/interfaces",
    "//mojo/services/network/interfaces",
    "//mojo/services/view_manager/cpp",
    "//third_party/pdfium",
  ]
}
