# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This list is used to populate the Dart mojo_services package. It must be
# updated to contain the public interfaces under //mojo/services. If you add a
# new directory, X, containing public interfaces, then you must add
# //mojo/services/X/public/interfaces to this list.

mojo_services = [
  "//mojo/services/asset_bundle/interfaces",
  "//mojo/services/authenticating_url_loader_interceptor/interfaces",
  "//mojo/services/authentication/interfaces",
  "//mojo/services/camera/interfaces",
  "//mojo/services/clipboard/interfaces",
  "//mojo/services/contacts/interfaces",
  "//mojo/services/content_handler/interfaces",
  "//mojo/services/device_info/interfaces",
  "//mojo/services/files/interfaces",
  "//mojo/services/geometry/interfaces",
  "//mojo/services/gpu/interfaces",
  "//mojo/services/http_server/interfaces",
  "//mojo/services/icu_data/interfaces",
  "//mojo/services/input_events/interfaces",
  "//mojo/services/keyboard/interfaces",
  "//mojo/services/location/interfaces",
  "//mojo/services/native_support/interfaces",
  "//mojo/services/native_viewport/interfaces",
  "//mojo/services/navigation/public/interfaces",
  "//mojo/services/network/public/interfaces",
  "//mojo/services/nfc/public/interfaces",
  "//mojo/services/notifications/public/interfaces",
  "//mojo/services/ozone_drm_gpu/public/interfaces",
  "//mojo/services/ozone_drm_host/public/interfaces",
  "//mojo/services/prediction/public/interfaces",
  "//mojo/services/sensors/public/interfaces",
  "//mojo/services/service_registry/public/interfaces",
  "//mojo/services/sharing/public/interfaces",
  "//mojo/services/speech_recognizer/public/interfaces",
  "//mojo/services/surfaces/public/interfaces",
  "//mojo/services/terminal/public/interfaces",
  "//mojo/services/tracing/public/interfaces",
  "//mojo/services/url_response_disk_cache/public/interfaces",
  "//mojo/services/vanadium/security/public/interfaces",
  "//mojo/services/view_manager/public/interfaces",
  "//mojo/services/window_manager/public/interfaces",
]
