# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")
import("//mojo/public/mojo.gni")

test("mojo_task_tracker_perftests") {
  deps = [
    "//base/test:test_support",
    "//mojo/edk/base_edk",
    "//mojo/edk/system",
    "//mojo/edk/test:run_all_perftests",
    "//mojo/environment:chromium",
    "//mojo/message_pump",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/bindings:callback",
    "//mojo/public/cpp/environment",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/test_support",
    "//mojo/public/cpp/utility",
    "//mojo/public/interfaces/bindings/tests:test_interfaces",
    "//base",
    "//testing/gtest",
  ]

  sources = [
    "task_tracker_perftest.cc",
  ]
}
