# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("media") {
  deps = [
    "//services/media/audio",
    "//services/media/common",
    "//services/media/framework",
    "//services/media/framework_create",
  ]
}
