# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

android_library("vsync") {
  java_files = [ "src/org/chromium/mojo/vsync/VSyncProviderImpl.java" ]

  deps = [
    "//mojo/public/java:bindings",
    "//mojo/public/java:system",
    "//mojo/services/vsync/interfaces:interfaces_java",
  ]
}
