# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("spinning_cube") {
  output_name = "spinning_cube_view"

  sources = [
    "main.cc",
    "spinning_cube_app.cc",
    "spinning_cube_app.h",
    "spinning_cube_view.cc",
    "spinning_cube_view.h",
  ]

  deps = [
    "//base",
    "//examples/spinning_cube:lib",
    "//mojo/application",
    "//mojo/common",
    "//mojo/environment:chromium",
    "//mojo/gpu",
    "//mojo/public/c/gpu",
    "//mojo/public/c/gpu:gpu_onscreen",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/environment",
    "//mojo/public/cpp/system",
    "//mojo/services/geometry/interfaces",
    "//mojo/services/input_events/interfaces",
    "//mojo/services/surfaces/interfaces",
    "//mojo/services/ui/views/interfaces",
  ]
}
