# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../mojo_edk.gni")

mojo_edk_source_set("platform") {
  sources = [
    "task_runner.h",
  ]

  mojo_sdk_public_deps = [ "mojo/public/cpp/system" ]

  # TODO(vtl): Remove this dependency.
  deps = [
    "//base",
  ]

  mojo_edk_public_deps = [ "mojo/edk/util" ]
}
