# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../mojo_sdk.gni")

# The list of sdk extension sources for dart:mojo.internal
dart_mojo_internal_sdk_sources =
    rebase_path([
                  "mojo/public/dart/mojo/sdk_ext/internal.dart",
                  "mojo/public/dart/mojo/sdk_ext/src/handle_watcher.dart",
                  "mojo/public/dart/mojo/sdk_ext/src/natives.dart",
                  "mojo/public/dart/mojo/sdk_ext/src/timer_queue.dart",
                  "mojo/public/dart/mojo/sdk_ext/src/wait_many_state.dart",
                ],
                "",
                mojo_root)
