# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("echo_service_interface") {
  sources = [
    "interfaces/echo_service.mojom",
  ]
}

mojom("pingpong_service_interface") {
  sources = [
    "interfaces/pingpong_service.mojom",
  ]
}
